--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -28,6 +28,12 @@
           <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '4'><i class="fas fa-door-open me-2"></i>Habitaciones</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '5'><i class="fas fa-door-open me-2"></i>Compañias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '6'><i class="fas fa-door-open me-2"></i>tipos de documentos</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{ path('app_logout') }}"><i class="fas fa-sign-out-alt me-2"></i>Cerrar sesión</a>
         </li>
       </ul>
