--- a/templates/clientes/lista.html.twig
+++ b/templates/clientes/lista.html.twig
@@ -1,24 +1,24 @@
 <turbo-frame id="frame-clientes">
   <div class="row justify-content-center">
-      <div class="col-md-11">
+      <div class="col-md-12">
           <div class="card shadow-sm border-0 rounded-4">
               <div class="card-body">
                   <h5 class="card-title mb-3">Listado de clientes</h5>
                   <div class="mb-3">
                       <input type="text" class="form-control" placeholder="Filtrar clientes..." id="filtroClientes">
                   </div>
-                  <div class="table-responsive">
+                  <div class="table-responsive" style="overflow-x:auto; max-height: 50vh; overflow-y:auto;">
                       <table class="table table-striped table-hover align-middle mb-0">
-                          <thead class="table-dark">
+                          <thead class="table-dark" style="position: sticky; top: 0; z-index: 2;">
                               <tr>
-                                  <th>Tipo documento</th>
-                                  <th>Numero documento</th>
-                                  <th>Nombre</th>
-                                  <th>Celular</th>
-                                  <th>Numero de placa</th>
-                                  <th>Numero de vehiculo</th>
-                                  <th>Compañia</th>
-                                  <th colspan=2 >Acciones</th>
+                                  <th style="background: #212529;">Tipo documento</th>
+                                  <th style="background: #212529;">Numero documento</th>
+                                  <th style="background: #212529;">Nombre</th>
+                                  <th style="background: #212529;">Celular</th>
+                                  <th style="background: #212529;">Numero de placa</th>
+                                  <th style="background: #212529;">Numero de vehiculo</th>
+                                  <th style="background: #212529;">Compañia</th>
+                                  <th colspan=2 style="background: #212529;">Acciones</th>
                               </tr>
                           </thead>
                           <tbody>
@@ -65,7 +65,7 @@
       </div>
   </div>
 
-  <!-- Modal para registrar tipos de documentos -->
+  <!-- Modal para registrar clientes -->
   <div class="modal fade" id="modalNuevoCliente" data-sistema--app-target="modalNuevoCliente" tabindex="-1" aria-labelledby="modalNuevoClienteLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
