--- a/templates/inicio/index.html.twig
+++ b/templates/inicio/index.html.twig
@@ -1,19 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello InicioController!{% endblock %}
+{% block title %}Hotel casa real norte{% endblock %}
 
 {% block body %}
     {% include 'menu.html.twig' %}
     <div class="container-fluid" style="background: #fff; width: 100%;  min-height: 100vh;" data-turbo="true" {{ stimulus_controller('sistema--app',
         {
+            'rutaCambiaEstadoServicio' : path('app_cambiaEstadoServicio', {'id' : 'var1', 'estado' : 'var2' }),
             'rutaObtenerDatosClienteReserva' : path('app_obtenerDatosClienteReserva', {'id' : 'var1' }),
+            'rutaEliminarTiposServ' : path('app_eliminarTiposServ', {'id' : 'var1' }),
             'rutaEliminarCompania' : path('app_eliminarCompania', {'id' : 'var1' }),
+            'rutaEliminarServicio' : path('app_eliminarServicio', {'id' : 'var1' }),
             'rutaEliminarClientes' : path('app_eliminarClientes', {'id' : 'var1' }),
             'rutaEliminarTipodoc' : path('app_eliminarTipodoc', {'id' : 'var1' }),
             'rutaEliminarHab' : path('app_eliminarHabitacion', {'id' : 'var1' }),
             'rutaEliminarPiso' : path('app_eliminarPiso', {'id' : 'var1' }),
+            'rutaListaServ' : path('app_listaServ', {'filtro' : 'var1' }),
+            'rutaGuardarTiposServ' : path('app_guardarTiposServ'),
             'rutaNuevaHabitacion' : path('app_nuevaHabitacion'),
             'rutaGuardarClientes' : path('app_guardarClientes'),
+            'rutaGuardarServicio' : path('app_guardarServicio'),
             'rutaGuardarReserva' : path('app_guardarReserva'),
             'rutaGuardarTipodoc' : path('app_guardarTipodoc'),
             'rutaNuevaCompania' : path('app_nuevaCompania'),
@@ -22,11 +28,15 @@
             'rutaAbrirTurno' : path('app_abrirTurno'),
             'rutaCompanias' : path('app_companias'),
             'rutaNuevoPiso' : path('app_nuevoPiso'),
+            'rutaDashboard' : path('app_dashboard'),
+            'rutaTiposServ' : path('app_tiposServ'),
             'rutaReservas' : path('app_reservas'),
             'rutaClientes' : path('app_clientes'),
             'rutaInicio' : path('app_inicio'),
             'rutaDocs' : path('app_tipodoc'),
             'rutaPisos' : path('app_pisos'),
+
+
 
         }
 
@@ -75,7 +85,7 @@
             </div>
         {% elseif pantalla == 7 %}
             <div class="row w-100 gx-4" style="padding-top: 75px;">
-                <turbo-frame id="frame-nuevaReserva" data-sistema--app-target="frameNuevaReserva" src="{{ path('app_nuevaReserva') }}" >
+                <turbo-frame id="frame-servicios" data-sistema--app-target="frameServicios" src="{{ path('app_servicios') }}" >
                     <p align="center"><i class="fas fa-cog fa-spin mt-5"></i> Cargando nueva reserva</p>
                 </turbo-frame>
             </div>
