--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -6,7 +6,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top w-100" style="background: #1a237e; max-width: 100vw; z-index: 1050;">
   <div class="container-fluid" data-turbo="true" {{ stimulus_controller('sistema--app',{'rutaVistas' : path('app_inicio', {'pantalla' : 'var1' }) })}} >
-    <a class="navbar-brand fw-bold" href="#">HOTEL CIUDAD REAL NORTE</a>
+    <a class="navbar-brand fw-bold" href="#">HOTEL CASA REAL NORTE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,7 +19,7 @@
           <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '1' ><i class="fas fa-calendar-check me-2"></i>Reservas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '1' ><i class="fas fa-calendar-check me-2"></i>Chekings</a>
+          <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '1' ><i class="fas fa-calendar-check me-2"></i>Check-in</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '2'><i class="fas fa-users me-2"></i>Clientes</a>
@@ -31,6 +31,7 @@
           <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
             <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="3"><i class="fas fa-layer-group me-2"></i>Pisos</a></li>
             <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="4"><i class="fas fa-door-open me-2"></i>Habitaciones</a></li>
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="7"><i class="fas fa-concierge-bell me-2"></i>Servicios</a></li>
             <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="5"><i class="fas fa-building me-2"></i>Compañias</a></li>
             <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="6"><i class="fas fa-id-card me-2"></i>Tipos de documentos</a></li>
           </ul>
