--- a/templates/inicio/index.html.twig
+++ b/templates/inicio/index.html.twig
@@ -14,9 +14,11 @@
             'rutaEliminarClientes' : path('app_eliminarClientes', {'id' : 'var1' }),
             'rutaEliminarTipodoc' : path('app_eliminarTipodoc', {'id' : 'var1' }),
             'rutaEliminarHab' : path('app_eliminarHabitacion', {'id' : 'var1' }),
+            'rutaObtenerServicio': path('app_obtenerServicio', {'id' : 'var1'}),
             'rutaEliminarPiso' : path('app_eliminarPiso', {'id' : 'var1' }),
             'rutaListaServ' : path('app_listaServ', {'filtro' : 'var1' }),
             'rutaGuardarTiposServ' : path('app_guardarTiposServ'),
+            'rutaGuardarProducto' : path('app_guardarProducto'),
             'rutaNuevaHabitacion' : path('app_nuevaHabitacion'),
             'rutaGuardarClientes' : path('app_guardarClientes'),
             'rutaGuardarServicio' : path('app_guardarServicio'),
@@ -35,6 +37,7 @@
             'rutaInicio' : path('app_inicio'),
             'rutaDocs' : path('app_tipodoc'),
             'rutaPisos' : path('app_pisos'),
+            'rutaProductos' : path('app_productos'),
 
 
 
@@ -89,7 +92,20 @@
                     <p align="center"><i class="fas fa-cog fa-spin mt-5"></i> Cargando nueva reserva</p>
                 </turbo-frame>
             </div>
+        {% elseif pantalla == 8 %}
+            <div class="row w-100 gx-4" style="padding-top: 75px;">
+                <turbo-frame id="frame-stock" data-sistema--app-target="frameStock" src="{{ path('app_stock') }}" >
+                    <p align="center"><i class="fas fa-cog fa-spin mt-5"></i> Cargando productos</p>
+                </turbo-frame>
+            </div>
+        {% elseif pantalla == 9 %}
+            <div class="row w-100 gx-4" style="padding-top: 75px;">
+                <turbo-frame id="frame-entradas" data-sistema--app-target="frameEntradas" src="{{ path('app_entradas') }}" >
+                    <p align="center"><i class="fas fa-cog fa-spin mt-5"></i> Cargando entradas</p>
+                </turbo-frame>
+            </div>
         {% endif %}
+        
 
     </div>
 {% endblock %}
