--- a/templates/inicio/index.html.twig
+++ b/templates/inicio/index.html.twig
@@ -37,7 +37,10 @@
             'rutaInicio' : path('app_inicio'),
             'rutaDocs' : path('app_tipodoc'),
             'rutaPisos' : path('app_pisos'),
+            'rutaEntradas' : path('app_entradas'),
             'rutaProductos' : path('app_productos'),
+            'rutaGuardarEntrada' : path('app_guardarEntrada'),
+            
 
 
 
