--- a/templates/stock/productos.html.twig
+++ b/templates/stock/productos.html.twig
@@ -38,6 +38,7 @@
     </div>
     <div class="mt-3 d-flex justify-content-space-between">
         <button type="button" class="btn btn-primary" data-action="sistema--app#abrirModalNuevoProducto" data-accion = '1' data-id = '0'>Nuevo</button>
+        <button type="button" class="btn btn-success" style="margin-left:15px">Cargar</button>
     </div>  
 
     <!-- Modal para registrar productos -->
